# crud-flask

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  startEnv.sh
crud_flask/: __init__.py  app.py  auth.py  callback.py  constants.py  home.py  login.py  logout.py  model.py  serializer.py  tasks.py
crud_flask/static/css/: colors.css  home.css  profile.css  styles.css
crud_flask/static/js/: tailwind.config.js
crud_flask/templates/: index.html  login.html  perfil.html  profile.html  user.html
migrations/versions/: 5a4b3e6c02f8_.py  c01493eff63e_.py  cfec7c830633_.py
tests/: test_crud_flask.py
videos/: demonstration.webm
